# example-project

./: .clinerules  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
blog/: index.html
docs/: index.md  modules.md
modules/: index.html
search/: search_index.json
